Fix Enum + User Entity

--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -19,7 +19,7 @@
                     <li><a href="{{path('affichagePeinture') }}">Peintures</a></li>
                     <li><a href="">Créer une armée</a></li>
                     <li><a href="">Ajouter une figurine</a></li>
-                    <li><a href="">Connexion</a></li>
+                    <li><a href="{{path('app_register') }}">Connexion</a></li>
                 </ul>
             </nav>
         </div>
