--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -20,7 +20,7 @@
                         <li><a href="{{path('affichagePeinture') }}">Peintures</a></li>
                         <li><a href="">Créer une armée</a></li>
                         {% if is_granted('ROLE_ADMIN') %}
-                        <li><a href="">Ajouter une figurine</a></li>
+                        <li><a href="{{path('creationFigurine') }}">Ajouter une figurine</a></li>
                         {% endif %}
                         <li><a href="{{path('app_logout') }}">Déconnexion</a></li>
                     {% else %}
