--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,88 +7,35 @@
     <h1 class="titre">Connexion</h1>
 {% endblock %}
 {% block body %}
-    <div class="form-container">
-        {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+    <br class="mt-4 mb-4">
+    <div class="d-flex align-items-center h-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-5 col-md-8">
+                    {% if error %}
+                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
 
-        <form action="{{ path('app_login') }}" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}">
+                    <form action="{{ path('app_login') }}" method="post" class="bg-white rounded shadow-5-strong p-5">
+                        <div class="form-outline mb-4" data-mdb-input-init>
+                            <label for="username" class="form-label">Username:</label>
+                            <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}">
+                        </div>
+
+                        <div class="form-outline mb-4" data-mdb-input-init>
+                            <label for="password" class="form-label">Password:</label>
+                            <input type="password" class="form-control" id="password" name="_password">
+                        </div>
+
+                        {# If you want to control the URL the user is redirected to on success #}
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                        <div class="form-btn d-flex align-items-center justify-content-center">
+                            <button type="submit" class="btn btn-primary btn-block align-items-center" data-mdb-ripple-init>Connexion</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="_password">
-            </div>
-
-            {# If you want to control the URL the user is redirected to on success #}
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-            <div class="form-btn">
-                <button type="submit" class="btn">Login</button>
-            </div>
-        </form>
+        </div>
     </div>
-
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-        }
-
-        .form-container {
-            max-width: 400px;
-            margin: auto;
-            padding: 20px;
-            margin-top: 50px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border: 1px solid #ccc;
-        }
-
-        .form-btn {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 15px;
-        }
-
-        .form-container h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .form-container .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-container form input {
-            width: 100%;
-            max-width: 300px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        .form-container form button {
-            width: 100%;
-            max-width: 300px;
-            padding: 10px;
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .form-container form button:hover {
-            background-color: #297fb8;
-        }
-    </style>
 {% endblock %}
