--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -122,6 +122,61 @@
                 max-width: 100%;
                 height: auto;
             }
+
+            table {
+                border:1px solid #c5c5c5;
+                border-collapse:collapse;
+                padding:7px;
+            }
+            table th {
+                border:1px solid #c5c5c5;
+                padding:7px;
+                background: #828173;
+                color: #ffffff;
+            }
+            table td {
+                border:1px solid #c5c5c5;
+                text-align:center;
+                padding:7px;
+                background: #e0e0e0;
+                color: #313030;
+            }
+
+            .mini-carte-container {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 5vh;
+            }
+
+            .mini-carte {
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                overflow: hidden;
+                margin: 10px;
+                width: 300px;
+                text-align: center;
+            }
+
+            .mini-carte img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            .dataSheet {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding: 2% 0 2% 0;
+                row-gap: 0.5em;
+            }
+
+            .button-admin {
+                display: flex;
+                gap: 1em;
+            }
         </style>
     </body>
 </html>
