Css Tableau de Bord

--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -178,6 +178,39 @@
                 display: flex;
                 gap: 1em;
             }
+
+            .tableauBord {
+                display: flex;
+                justify-content: center;
+                margin: 3%;
+            }
+            
+            .tableauBord h3 {
+                text-decoration: underline;
+            }
+
+            .tableauBord h2 {
+                text-decoration: underline;
+                font-weight: bold;
+            }
+
+            .container-tableauBord {
+                display: flex;
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                overflow: hidden;
+                width: 100%;
+                justify-content: center;
+                gap: 10%;
+                padding: 5%;
+            }
+
+            .container-tableauBord div {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         </style>
     </body>
 </html>
