--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -20,6 +20,7 @@
                         <li><a href="{{ path('affichageFigurine') }}">Figurines</a></li>
                         <li><a href="{{path('affichagePeinture') }}">Peintures</a></li>
                         <li><a href="{{path('creationArmee')}}">Créer une armée</a></li>
+                        <li><a href="{{path('affichageListe')}}">Mes armées</a></li>
                         {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{path('creationFigurine') }}">Ajouter une figurine</a></li>
                         <li><a href="{{path('tableauDeBord') }}">Tableau de Bord</a></li>
