--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -212,6 +212,32 @@
                 flex-direction: column;
                 align-items: center;
             }
+
+            .liste {
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                overflow: hidden;
+                margin: 10px;
+                width: 400px;
+                text-align: center;
+            }
+
+            .liste a {
+                text-decoration: none;
+                color: #333;
+            }
+
+            .liste h2 {
+                margin: 10px 0;
+            }
+
+            .divListe {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1em;
+            }
         </style>
     </body>
 </html>
