--- a/templates/afichageListe.html.twig
+++ b/templates/afichageListe.html.twig
@@ -6,11 +6,13 @@
     <h1 class="titre">Liste des Armées crées</h1>
 {% endblock %}
 {% block body %}
-    {% for army in armies %}
-        <p>{{army.name}}</p>
-        {% for figurine in army.figurines %}
-            <p>{{figurine.name}}</p>
+    <div class="carte_container">
+        {% for army in armies %}
+            <div class="liste">
+                <a href="{{ path("listeInspection", {"id": army.id}) }}">
+                    <h2>{{army.name}}</h2>
+                </a>
+            </div>
         {% endfor %}
-        <p>{{army.user.username}}</p>
-    {% endfor %}
+    </div>
 {% endblock %}
